fixing initial welcome message overlapping

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,3 +41,31 @@ button {
   cursor: pointer;
   user-select: none;
 }
+
+/* Required Alignment */
+
+.flexRow {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#content {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+#main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
